--- a/Cloud/pom.xml
+++ b/Cloud/pom.xml
@@ -7,6 +7,9 @@
   <groupId>com.hewei.cloud</groupId>
   <artifactId>Cloud2022</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <modules>
+    <module>payment</module>
+  </modules>
   <packaging>pom</packaging>
 
   <repositories>
@@ -42,7 +45,6 @@
     <druid.version>1.1.16</druid.version>
     <mybatis.spring.boot.version>1.3.2</mybatis.spring.boot.version>
   </properties>
-
   <!-- 子模块继承之后，提供作用：锁定版本+子模块不用写groupId和version  -->
   <dependencyManagement>
     <dependencies>
