--- a/Cloud/pom.xml
+++ b/Cloud/pom.xml
@@ -10,6 +10,7 @@
   <modules>
     <module>payment</module>
       <module>cloud-consumer-order80</module>
+      <module>cloud-api-common</module>
   </modules>
   <packaging>pom</packaging>
 
