--- a/Cloud/cloud-consumer-order80/pom.xml
+++ b/Cloud/cloud-consumer-order80/pom.xml
@@ -12,6 +12,16 @@
     <artifactId>cloud-consumer-order80</artifactId>
 
     <dependencies>
+
+
+        <!-- 引入自己定义的api通用包 -->
+        <dependency>
+            <groupId>com.hewei.cloud</groupId>
+            <artifactId>cloud-api-common</artifactId>
+            <version>${project.version}</version>
+            <scope>compile</scope>
+        </dependency>
+
         <!--  springboot 2.2.2    -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
