--- a/Cloud/cloud-consumer-order80/pom.xml
+++ b/Cloud/cloud-consumer-order80/pom.xml
@@ -11,78 +11,69 @@
 
     <artifactId>cloud-consumer-order80</artifactId>
 
-    <dependencies>
+   <dependencies>
 
+       <!--<dependency>
+           <groupId>org.springframework.cloud</groupId>
+           <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+       </dependency>-->
 
-        <!-- 引入自己定义的api通用包 -->
-        <dependency>
-            <groupId>com.hewei.cloud</groupId>
-            <artifactId>cloud-api-common</artifactId>
-            <version>${project.version}</version>
-            <scope>compile</scope>
-        </dependency>
+       <!-- 引入自己定义的api通用包 -->
+       <dependency>
+           <groupId>com.hewei.cloud</groupId>
+           <artifactId>cloud-api-common</artifactId>
+           <version>${project.version}</version>
+           <scope>compile</scope>
+       </dependency>
 
-        <!--  springboot 2.2.2    -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-dependencies</artifactId>
-            <version>2.2.2.RELEASE</version>
-            <type>pom</type>
-            <scope>import</scope>
-        </dependency>
-        <!--  spring cloud Hoxton.SR1   -->
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-dependencies</artifactId>
-            <version>Hoxton.SR1</version>
-            <type>pom</type>
-            <scope>import</scope>
-        </dependency>
-        <!--  spring cloud alibaba 2.1.0.RELEASE    -->
-        <dependency>
-            <groupId>com.alibaba.cloud</groupId>
-            <artifactId>spring-cloud-alibaba-dependencies</artifactId>
-            <version>2.1.0.RELEASE</version>
-            <type>pom</type>
-            <scope>import</scope>
-        </dependency>
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>${mysql.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>druid</artifactId>
-            <version>1.2.9</version>
-            <!-- <version>${druid.version}</version>-->
-        </dependency>
-        <dependency>
-            <groupId>org.mybatis.spring.boot</groupId>
-            <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>2.2.2</version>
-        </dependency>
-        <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>${log4j.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>${junit.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>1.18.24</version>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-    </dependencies>
+       <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web -->
+       <dependency>
+           <groupId>org.springframework.boot</groupId>
+           <artifactId>spring-boot-starter-web</artifactId>
+       </dependency>
+
+       <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web  -->
+       <dependency>
+           <groupId>org.springframework.boot</groupId>
+           <artifactId>spring-boot-starter-actuator</artifactId>
+       </dependency>
+
+       <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-devtools -->
+       <!--        <dependency>-->
+       <!--            <groupId>org.springframework.boot</groupId>-->
+       <!--            <artifactId>spring-boot-devtools</artifactId>-->
+       <!--            <scope>runtime</scope>-->
+       <!--            <optional>true</optional>-->
+       <!--        </dependency>-->
+
+       <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+       <dependency>
+           <groupId>org.projectlombok</groupId>
+           <artifactId>lombok</artifactId>
+           <optional>true</optional>
+       </dependency>
+
+       <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-test -->
+       <dependency>
+           <groupId>org.springframework.boot</groupId>
+           <artifactId>spring-boot-starter-test</artifactId>
+           <scope>test</scope>
+       </dependency>
+
+       <!--包含了sleuth+zipkin-->
+  <!--     <dependency>
+           <groupId>org.springframework.cloud</groupId>
+           <artifactId>spring-cloud-starter-zipkin</artifactId>
+       </dependency>-->
+       <dependency>
+           <groupId>com.alibaba</groupId>
+           <artifactId>druid</artifactId>
+       </dependency>
+       <dependency>
+           <groupId>mysql</groupId>
+           <artifactId>mysql-connector-java</artifactId>
+       </dependency>
+   </dependencies>
 
 
 </project>
