--- a/Cloud/pom.xml
+++ b/Cloud/pom.xml
@@ -9,8 +9,10 @@
   <version>1.0-SNAPSHOT</version>
   <modules>
     <module>payment</module>
-      <module>cloud-consumer-order80</module>
-      <module>cloud-api-common</module>
+    <module>cloud-consumer-order80</module>
+    <module>cloud-api-common</module>
+    <module>cloud-eureka-server7001</module>
+      <module>cloud-eureka-server7002</module>
   </modules>
   <packaging>pom</packaging>
 
