--- a/Cloud/cloud-consumer-order80/pom.xml
+++ b/Cloud/cloud-consumer-order80/pom.xml
@@ -73,6 +73,13 @@
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
        </dependency>
+
+       <!-- Eureka 客户端坐标-->
+       <dependency>
+           <groupId>org.springframework.cloud</groupId>
+           <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+       </dependency>
+
    </dependencies>
 
 
