--- a/Cloud/payment02/src/main/resources/application.yml
+++ b/Cloud/payment02/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8001
+  port: 8002
 
 spring:
   application:
@@ -27,7 +27,7 @@ eureka:
       #      defaultZone: http://localhost:7001/eureka #单机版
       defaultZone: http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka  #集群版
   instance:
-    instance-id: payment8001 #Service唯一标识显示的ID。
+    instance-id: payment8002
     prefer-ip-address: true  #访问路径可以显示IP地址
 #    Eureka客户端向服务端发送心跳的时间间隔，单位为秒(默认是30秒)
 #    lease-renewal-interval-in-seconds: 1
