--- a/Cloud/pom.xml
+++ b/Cloud/pom.xml
@@ -12,7 +12,8 @@
     <module>cloud-consumer-order80</module>
     <module>cloud-api-common</module>
     <module>cloud-eureka-server7001</module>
-      <module>cloud-eureka-server7002</module>
+    <module>cloud-eureka-server7002</module>
+    <module>payment02</module>
   </modules>
   <packaging>pom</packaging>
 
