--- a/Cloud/pom.xml
+++ b/Cloud/pom.xml
@@ -14,6 +14,7 @@
     <module>cloud-eureka-server7001</module>
     <module>cloud-eureka-server7002</module>
     <module>payment02</module>
+      <module>consul-payment-server</module>
   </modules>
   <packaging>pom</packaging>
 
